# nekomancer

./: CMakeLists.txt  Makefile  build.sh  ideas.md  uml.drawio  uml.xmi
components/: Alive.hpp  CMakeLists.txt  CPicture.cpp  CPicture.hpp  Picture.hpp
components/CAlive/: Alive.cpp  Alive.hpp  CMakeLists.txt
components/CPicture/: CMakeLists.txt  Picture.cpp  Picture.hpp
components/include/nek/: CAlive.hpp  CPicture.hpp
core/include/nek/: core.hpp
core/include/nek/core/: Component.hpp  Computed.hpp  Entity.hpp  Exception.hpp  IEngine.hpp  IJsonify.hpp  IdGenerator.hpp  Json.hpp  Observer.hpp  Property.hpp  Reactive.hpp  State.hpp
core/include/nek/core/Component/: Base.hpp  Bitset.hpp  Interface.hpp  Manager.hpp  Plugin.hpp  Store.hpp
core/include/nek/core/Entity/: Base.hpp  Store.hpp
core/include/nek/core/Observer/: IObservable.hpp  Interface.hpp  Plog.hpp
core/src/: CMakeLists.txt  Exception.cpp  IJsonify.cpp  Json.cpp  Reactive.cpp
core/src/Component/: Bitset.cpp  Interface.cpp  Manager.cpp  Store.cpp
core/src/Entity/: Base.cpp  Store.cpp
core/src/Observer/: IObservable.cpp  Plog.cpp
core/test/: CMakeLists.txt  test-Component.cpp  test-Component.hpp  test-Computed.cpp  test-Entity.hpp  test-IJsonify.cpp  test-IdGenerator.hpp  test-Json.cpp  test-Property.cpp  test-Reactive.cpp  test-State.cpp  test-main.cpp  test.hpp
core/test/Component/: test-Bitset.cpp  test-Manager.cpp  test-Store.cpp
core/test/Entity/: test-Base.cpp  test-Store.cpp
core/test/components/: Alive.hpp  CAlive.cpp  CAlive.hpp  CMakeLists.txt  CPicture.cpp  CPicture.hpp  Picture.hpp
engine/: CMakeLists.txt  main.cpp  nek-config.json
engine/src/: Engine.hpp  main.cpp
systems/: CMakeLists.txt
systems/SSaves/: CMakeLists.txt  Saves.cpp
systems/STick/: CMakeLists.txt  Tick.cpp
systems/include/nek/: SSaves.hpp  STick.hpp
